src/objects/IPM_Task__c.object
<CustomObject>
    <fields>
        <fullName>ExternalField__c</fullName>
        <description>External field for the task</description>
        <externalId>true</externalId>
        <label>ExternalField</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the task is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User to whom the task is assigned</description>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_AutoCompletedBySystem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value is checked when the task is completed by the system</description>
        <label>AutoCompleted By System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Completed_Date__c</fullName>
        <description>The date of task completion</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value is checked when the task is completed</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date1__c</fullName>
        <description>The date by which the task should be completed</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date1_isNull__c</fullName>
        <description>This field will advice if the Due Date is null or not</description>
        <formula>IF( ISBLANK( IPM_Due_Date1__c ) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice if the Due Date is null or not</inlineHelpText>
        <label>IPM_Due_Date1_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Due_Date__c</fullName>
        <description>Due date of the milestone</description>
        <label>Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Function__c</fullName>
        <description>Function describes the Role of the user task is related</description>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MKTG DEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MKTG LOCAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Is_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether it is a master task</description>
        <label>is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Master_Section_Name__c</fullName>
        <description>Field for the master section name</description>
        <formula>IPM_Section__r.IPM_Section_Name__c</formula>
        <label>Master Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Master_Section_Sequence__c</fullName>
        <description>Vaue for storing the section number of the master data</description>
        <formula>IPM_Section__r.IPM_Section_Sequence__c</formula>
        <label>Master Section Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Master_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for the master task</description>
        <label>Master Task</label>
        <referenceTo>IPM_Task__c</referenceTo>
        <relationshipLabel>IPM Tasks</relationshipLabel>
        <relationshipName>IPM_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Multiple_Functional_Role__c</fullName>
        <label>IPM Multiple Functional Role</label>
        <picklist>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MKTG DEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MKTG LOCAL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPM_Phase_Task_Added__c</fullName>
        <description>The phase at which future task was added</description>
        <label>IPM Phase Task Added</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Phase__c</fullName>
        <description>Field for the phase of the task</description>
        <label>Phase</label>
        <picklist>
            <controllingField>IPM_Type_of_Gate__c</controllingField>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Launch Evaluation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Document_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project document section for which the task is created</description>
        <label>IPM Project Document Section</label>
        <referenceTo>IPM_Project_Document_Section__c</referenceTo>
        <relationshipLabel>IPM Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The template for the project for which task is created</description>
        <label>IPM Project Template</label>
        <referenceTo>IPM_Project_Template__c</referenceTo>
        <relationshipLabel>IPM Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Project__c</fullName>
        <description>The project for which the task is created</description>
        <label>IPM Project</label>
        <referenceTo>IPM_Project__c</referenceTo>
        <relationshipLabel>IPM Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPM_SectionExternalIDFormula__c</fullName>
        <formula>IPM_Section__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SectionExternalIDFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Number__c</fullName>
        <description>The field for the section associated with the task</description>
        <label>Section Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The section of the document for which the task is created</description>
        <label>IPM Section</label>
        <referenceTo>IPM_Section__c</referenceTo>
        <relationshipLabel>IPM Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_StoppedByProject__c</fullName>
        <label>Stopped By Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_TaskSpan__c</fullName>
        <label>Task Span</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Task_Complexity__c</fullName>
        <description>The complexity of the task</description>
        <label>Task Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Task_Is_Completed__c</fullName>
        <formula>IF(IPM_Completed__c  = true, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Status(Completed)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Task_Name__c</fullName>
        <description>The name of the task created</description>
        <label>Task Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Task_Section_External_ID__c</fullName>
        <label>Task Section ExternalID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Task_Temp_Complexity__c</fullName>
        <description>Copy the template complexity to task.</description>
        <formula>TEXT(IPM_Project_Template__r.IPM_Template_Complexity__c)</formula>
        <label>Task Temp Complexity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Task_Type__c</fullName>
        <description>The type of the task created</description>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Negotiable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Negotiable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Type_of_Gate__c</fullName>
        <description>The gate associated with the task</description>
        <label>Type of Gate</label>
        <picklist>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready Gate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment Gate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLE/Learnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Design Lock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Type_of_Task__c</fullName>
        <description>Type of the task whether it is system generated ,ad hoc or future ad hoc</description>
        <label>IPM Type of Task</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Adhoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Version_Number__c</fullName>
        <description>The version number for the section</description>
        <label>Version Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSystemGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if it is system generated task</description>
        <label>IsSystemGenerated</label>
        <type>Checkbox</type>
    </fields>
    <label>IPM Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Task_Name__c</columns>
        <columns>IPM_Section__c</columns>
        <columns>IPM_Project__c</columns>
        <columns>IPM_Project_Template__c</columns>
        <columns>IPM_Task_Type__c</columns>
        <columns>IPM_Assignee__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IPM_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Master_Tasks</fullName>
        <columns>NAME</columns>
        <columns>ExternalField__c</columns>
        <columns>IPM_Section__c</columns>
        <columns>IPM_Section_Number__c</columns>
        <columns>IPM_Phase__c</columns>
        <columns>IPM_Task_Name__c</columns>
        <columns>IPM_Is_Master__c</columns>
        <columns>IPM_Master_Section_Name__c</columns>
        <columns>IPM_Master_Section_Sequence__c</columns>
        <columns>IPM_Master_Task__c</columns>
        <columns>IPM_Type_of_Gate__c</columns>
        <columns>IPM_Task_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IPM_Is_Master__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Master Tasks</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Task ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPM Tasks</pluralLabel>
    <recordTypes>
        <fullName>IPM_Project_Tasks</fullName>
        <active>true</active>
        <label>IPM Project Tasks</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPM_Tasks</fullName>
        <active>true</active>
        <description>This is the list of tasks where IPM Central Team will manage</description>
        <label>IPM Tasks</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>